# agents-for-all

./: .buildinfo  .gitignore  .pre-commit-config.yaml  README.md  api.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  search.html  searchindex.js
.doctrees/: api.doctree  environment.pickle  index.doctree
.github/workflows/: docs.yml  release.yml  test.yml  test_310.yml  test_311.yml  test_312.yml  test_313.yml
_images/: inheritance-f94e742eb5329212116cf4e8d1308c53265bb7da.png.map
agents_for_all/: __init__.py  agent.py
agents_for_all/llms/: __init__.py  anthropic.py  base_model.py  direct.py  gemini.py  openai.py
agents_for_all/tools/: __init__.py  base_tool.py  data_analysis.py  email.py  file.py  math.py  python.py  shell.py  web_fetcher.py  web_search.py
docs/: api.rst  conf.py  index.rst
examples/: fibionacci.py  system_date.py  web_count.py
tests/: test_agent.py  test_direct.py  test_python_tool.py
tests/llms/: test_anthropic.py  test_direct.py  test_gemini.py  test_openai.py
tests/tools/: test_data_analysis.py  test_email.py  test_file.py  test_math.py  test_shell.py  test_web_fetcher.py  test_web_search.py
